--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -7,7 +7,7 @@
 
 }
 .cabecalho__principal {
-    background-image: url('../imagem.img/cabecalho.jpg.png');
+    background-image: url('../imagem.img/logo.PNG   ');
 
     background-repeat: no-repeat;
     background-size: contain;
@@ -19,7 +19,7 @@
 li{
     display: inline-block; 
     border-radius: 3px;
-    font-size: 160%;
+    font-size: 120%;
     margin: 10px;
     padding: 2px 10px 1px 16px; 
 }
@@ -49,7 +49,8 @@ li:active{
 .cabecalho__enviar___cadastro{
     font-weight:bold;
     float:right;
-    border:transparent
+    border:transparent;
+    background:#ffffff;
 }
 
 
@@ -57,9 +58,9 @@ li:active{
 .login{
     display: flex;
     float: right;
-    padding: 5px 0px 8px 12px;
+    padding: 0px ;
     color: #ffffff;
-    margin: 12px;
+    margin: 10px 10px 10px 10px;
 }
 .password{
     margin: 0px 0px 0px 50px;
