add peg de moedas

--- a/css/home.css
+++ b/css/home.css
@@ -95,4 +95,17 @@ form label ,form legend {
 }
 
 
+.destaques__principal{
+    background-image: url('../imagem.img/body.jpg.png');
+}
+
+/*------------------------------------*/
+
+
+
+.servoco{
+    background: #6986f7;
+}
+
+
 
