--- a/css/moedas.css
+++ b/css/moedas.css
@@ -10,6 +10,7 @@
     grid-row: 1 / 1;
     width: 49%;
     height: 75%;
+    
 }
 .caixa {
     align-items: flex-end;
@@ -19,7 +20,7 @@
 .b__titulo{
     background:transparent;
     color: #000000;
-    padding: 3px 0px 8% 4px;
+    padding: 3px 0px 33px  4px;
     text-align: center;
     width: 100%;
 
