--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -30,18 +30,18 @@ li:active{
 
 
 .cabecalho__enviar___home{
-    background: #6986f7;
+    background: #ffffff;
     font-weight:bold;
     float:right;
     
 }
 .cabecalho__enviar___Servico{ 
-  background: #6986f7;
+  background: #ffffff;
  font-weight:bold;
  float:right;
 }
 .cabecalho__enviar___Login{
-    background: #6986f7;
+    background: #ffffff;
     font-weight:bold;
     float:right;
 }
