--- a/css/investimento.css
+++ b/css/investimento.css
@@ -163,7 +163,7 @@
 {
     width: 50%;
     height: 100%;
-    background:#6986f7 ;
+    background:#ffffff ;
     padding: 3px 0px 33px  4px;
     align-items: flex-end;
     display: flex;
